--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -12,9 +12,16 @@ body { background-color: #eeedef; font-family: 'akzidenz-cn'; }
 .nav .right > .button { display: none; }
 .nav .large-logo { display: inline; }
 .nav .small-logo { display: none; }
+
+.nav.small { height: 64px; }
+.nav .wrapper { padding: 0px 12px; }
+.nav.small .right a { line-height: 64px; }
+.nav.small .large-logo { display: none; }
+.nav.small .small-logo { display: inline-block; }
     
 .wrapper { max-width: 960px; margin: 0px auto; }
 .header-one { text-align: center; background-color: #eeedef; margin-top: 64px; min-height: 640px; position:relative; }
+.header-one .wrapper { position: absolute; top: 0; left: 0; right: 0; }
 .header-one .prev { width: 36px; height: 120px; position: absolute;  left: 12px; top: 280px; cursor: pointer; }
 .header-one .next { width: 36px; height: 120px; position: absolute; right: 12px; top: 280px; cursor: pointer; }
 .header-one .owl-carousel-one .item { position: relative;  height: 640px; opacity: 0; }
@@ -60,16 +67,16 @@ body { background-color: #eeedef; font-family: 'akzidenz-cn'; }
 
 @media(min-width:1200px){  }
 @media(max-width:960px){
+	/*these will override the '.small' nav class properties for small devices*/
     .nav { height: 64px; }
     .nav .wrapper { padding: 0px 12px; }
-    .nav .left { height: 64px; }
+    .nav .left { height: inherit; }
     .nav .right a { line-height: 64px; }
     .nav .large-logo { display: none; }
     .nav .small-logo { display: inline-block; }
 }
 @media(max-width:800px){
     .nav .left { height: 48px; margin: 8px 0px; }
-    
 }
 @media(max-width:640px){
     .header-one video { display: none; }
