--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -70,6 +70,7 @@ body { background-color: #eeedef; font-family: 'akzidenz-cn'; }
 .section-three .wrapper.small { max-width: 640px; }
 .section-three h3 { font-family: 'akzidenz-light-cn'; font-size: 50px; color: #696969; font-weight: normal; }
 .section-three p { font-family: 'akzidenz-light'; font-size: 23px; color: #696969; line-height: 32px; }
+.section-three img.full { display: block; width: 100%; padding-bottom: 12px; }
 .section-three .center { text-align: center; }
 .section-three .left { display: inline-block; width: 48%; margin-right: -4px; padding-right: 2%; }
 .section-three .right { display: inline-block; width: 48%; padding-left: 2%; vertical-align: top; }
@@ -84,15 +85,15 @@ body { background-color: #eeedef; font-family: 'akzidenz-cn'; }
 .section-three .front, .back {	-webkit-backface-visibility: hidden;-moz-backface-visibility: hidden; -o-backface-visibility: hidden;backface-visibility: hidden ;position: absolute; top: 0; left: 0; }
 .section-three .front {  }
 .section-three .back span { position: absolute; top: 4px; left: 4px; color: #fff; font-size: 24px; font-family: 'akzidenz-cn'; padding: 12px; }
-.section-three .back { -webkit-transform: rotateY(150deg);	-moz-transform: rotateY(210deg); -o-transform: rotateY(210deg); transform: rotateY(210deg); }
+.section-three .back { -webkit-transform: rotateY(210deg);	-moz-transform: rotateY(210deg); -o-transform: rotateY(210deg); transform: rotateY(210deg); }
 
 .section-four { position: relative; overflow: hidden; background: url('') no-repeat center center; background-size: cover; height: 720px; }
 .section-four .wrapper { position: relative; height: inherit; margin: 0px auto; text-align: center;  }
 .section-four img { position: absolute; }
-.section-four img.full { position: absolute; width: 120%; bottom:0;right:-5%;left:-5%; }
+.section-four img.fuller { position: absolute; width: 120%; bottom:0;right:-5%;left:-5%; }
 .section-four img.one-fourth { width: 32%; position: absolute; }
 
-.footer { background-color: #FFF; }
+.footer { background-color: #FFF; padding-bottom: 200px; }
 .footer .wrapper { padding: 0px 12px; }
 .footer .left { display: inline-block; width: 50%; margin-right: -4px; }
 .footer .left img { height: 64px; }
